Implemented replay caching for ReplayService Parallelized local replay loading to improve performance Fixed a bug, where two separate subscribed actions prompted the VaultEntityController to load the replays twice on changing the number of replays per page combobox.